--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb"],
+  "extends": [],
   "rules": {
     "max-len": [1, 70, 2, {"ignoreComments": true}],
     "react/jsx-filename-extension": "off",
