--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
   "parser": "babel-eslint",
   "rules": {
-    "max-len": [1, 70, 2, {"ignoreComments": true}],
     "react/jsx-filename-extension": "off",
-    "react/prefer-stateless-function": "off"
+    "react/prefer-stateless-function": "off",
+    "max-len": "off"
   },
   "globals": {
     "window": true,
