--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb"],
   "rules": {
-    "max-len": [1, 70, 2, {"ignoreComments": true}],
+    "max-len": "off",
     "react/jsx-filename-extension": "off",
     "react/prefer-stateless-function": "off"
   },
